--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -1037,7 +1037,7 @@
        "3  0    2      1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -1213,7 +1213,7 @@
        "max     77.000000  200.000000  564.000000  202.000000    6.200000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,12 +1356,12 @@
    "metadata": {},
    "source": [
     "#### Healthy \\ Sick population mean\n",
-    "We will use a t-test to find the numerical features which exhibit a mean which is significantly ($\\alpha =< 0.05$) different between the healthy and sick population. The null hypothesis is that $\\mu_1 = \\mu_2$."
+    "We will use a t-test to find the numerical features which exhibit a mean which is significantly ($p <= 0.05$) different between the healthy and sick population. The null hypothesis is that $\\mu_1 = \\mu_2$. If the p-value is smaller than 0.05, we consider the difference significant and compute the CI using a two-sided t-test value with df = 301."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1397,28 +1397,28 @@
        "      <td>4.119569</td>\n",
        "      <td>4.151515</td>\n",
        "      <td>4.910356e-05</td>\n",
-       "      <td>[1.4007345552097337, 6.902295747820563]</td>\n",
+       "      <td>[1.4006612594578511, 6.902369043572446]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trestbps</th>\n",
        "      <td>2.561884</td>\n",
        "      <td>5.083399</td>\n",
        "      <td>1.089746e-02</td>\n",
-       "      <td>[-0.4575110590279676, 10.624309478000317]</td>\n",
+       "      <td>[-0.4576586990050675, 10.624457117977416]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>thalach</th>\n",
        "      <td>-8.082866</td>\n",
        "      <td>-19.351779</td>\n",
        "      <td>1.553316e-14</td>\n",
-       "      <td>[-26.036037746495122, -12.667519565757875]</td>\n",
+       "      <td>[-26.036215851501556, -12.667341460751441]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>oldpeak</th>\n",
        "      <td>8.104618</td>\n",
        "      <td>0.982648</td>\n",
        "      <td>1.341348e-14</td>\n",
-       "      <td>[0.6459729155691492, 1.3193235271185992]</td>\n",
+       "      <td>[0.6459639447084013, 1.319332497979347]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1432,13 +1432,13 @@
        "oldpeak   8.104618    0.982648  1.341348e-14   \n",
        "\n",
        "                                                  CI  \n",
-       "age          [1.4007345552097337, 6.902295747820563]  \n",
-       "trestbps   [-0.4575110590279676, 10.624309478000317]  \n",
-       "thalach   [-26.036037746495122, -12.667519565757875]  \n",
-       "oldpeak     [0.6459729155691492, 1.3193235271185992]  "
+       "age          [1.4006612594578511, 6.902369043572446]  \n",
+       "trestbps   [-0.4576586990050675, 10.624457117977416]  \n",
+       "thalach   [-26.036215851501556, -12.667341460751441]  \n",
+       "oldpeak      [0.6459639447084013, 1.319332497979347]  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1461,7 @@
     "        #n1+n+2\n",
     "        n_h = len(healthy_population)\n",
     "        n_s = len(sick_population)\n",
-    "        df = n_h + n_s\n",
+    "        df = n_h + n_s - 2\n",
     "        \n",
     "        #variance\n",
     "        v_h = np.var(healthy_population)\n",
@@ -1474,6 +1474,67 @@
     "        numeric_significants.loc[feature] = [t, delta, p, CI]\n",
     "        \n",
     "numeric_significants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Correlations between numerical features\n",
+    "We begin by calcaulting the pearson correlation between numerical features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age age\n",
+      "age trestbps\n",
+      "age chol\n",
+      "age thalach\n",
+      "age oldpeak\n",
+      "trestbps age\n",
+      "trestbps trestbps\n",
+      "trestbps chol\n",
+      "trestbps thalach\n",
+      "trestbps oldpeak\n",
+      "chol age\n",
+      "chol trestbps\n",
+      "chol chol\n",
+      "chol thalach\n",
+      "chol oldpeak\n",
+      "thalach age\n",
+      "thalach trestbps\n",
+      "thalach chol\n",
+      "thalach thalach\n",
+      "thalach oldpeak\n",
+      "oldpeak age\n",
+      "oldpeak trestbps\n",
+      "oldpeak chol\n",
+      "oldpeak thalach\n",
+      "oldpeak oldpeak\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = len(numeric_features)\n",
+    "numeric_corr = pd.DataFrame(columns = ['feature2','mean-delta', 'p-val', 'CI'])\n",
+    "\n",
+    "for f1, f2 in [(f1, f2) for f1 in DF[numeric_features].columns for f2 in DF[numeric_features].columns]:\n",
+    "    if f1 != f2:\n",
+    "        "
    ]
   },
   {
