--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb6e48d-73aa-40e5-9a28-0b594e6bb09c",
+   "id": "3dbe02a4-9459-4658-87b5-5e7f9d86be3d",
    "metadata": {
     "tags": []
    },
@@ -293,8 +293,17 @@
     "Report the number of genes overexpressed in M vs H (M > H) at\n",
     "a p-value better (≤) than 0.07 and separately genes\n",
     "underexpressed in M vs H (M < H) at a p-value better than 0.07.\n",
-    "For both directions use both a Student t-test and a WRS test.\n",
-    "d. Correlations\n",
+    "For both directions use both a Student t-test and a WRS test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46432204-3b2d-4cad-8c22-919a444b3726",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## d. Correlations\n",
     "Select the 80 most significant genes from each one of the one-\n",
     "sided WRS DE lists you computed in 3c. Generate a set of 160\n",
     "genes, D, which is the union of the above two sets.\n",
